--- a/app/views/form_example/form_result.html.erb
+++ b/app/views/form_example/form_result.html.erb
@@ -1,4 +1,4 @@
 <div class="container-inner">
-	<h1>Form Results</h1>
-	<p>Your name is <%= params[:name] %> and your favorite color is <%= params[:color] %>!</p>
+	<h1>Contact Us</h1>
+	<p>Thanks <%= params[:name] %>, your message has been sent and we will contact you soon!</p>
 </div>
