--- a/app/views/form_example/form_input.html.erb
+++ b/app/views/form_example/form_input.html.erb
@@ -1,7 +1,7 @@
 <div class="container-inner">
 	<h1>Contact Us</h1>
 
-	<%= form_tag(form_output_path, method: "get") do %>
+	<%= form_tag(contact_thanks_path, method: "get") do %>
 	  <p>
 	  	<%= label_tag(:name, "Name:") %>
 	  	<%= text_field_tag(:name) %>
