--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -27,6 +27,7 @@
         <li><%= link_to 'Products', products_path %></li>
         <li><%= link_to 'About', about_path %></li>
         <li><%= link_to 'Contact', contact_path %></li>
+        <li><%= link_to 'My Blog', controller: 'posts' %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
