--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -1,3 +1,41 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.post {
+	border: 5px solid #000;
+	padding: 10px;
+	margin-bottom: 20px;
+	position: relative;
+	&:hover .post_edit {
+		display: block;
+	}
+}
+
+.post_title {
+	a {
+		color: #000;
+	}
+	font-size: 2em;
+}
+
+.post_text {
+	padding: 20px 0;
+}
+
+.post_edit {
+	display:none;
+	position: absolute;
+	bottom: 10px;
+	right: 20px;
+}
+
+.post_btn {
+	a {
+	color: #fff;
+	padding: 10px 20px;
+	background: #000;
+	&:hover {
+		background-color: #d43f3a;
+		}
+	}
+}
