--- a/app/views/pages/landing_page.html.erb
+++ b/app/views/pages/landing_page.html.erb
@@ -33,4 +33,16 @@
 	 	</div>
 	 </div>
 	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<div class="landing_header"><%= link_to "Recent Blog Posts", controller: 'posts' %></div>
+			<% @latest_posts.each do |post| %>
+		      <div class="post">
+		        <div class="post_title">
+		          <%= link_to post.title, post_path(post) %>
+		        </div>
+		      </div>
+		    <% end %>
+		</div>
+	</div>
 </div>
