--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,20 +1,27 @@
 <div class="container-inner">
   <h1>Listing posts</h1>
    
-  <table>
-    <tr>
-      <th>Title</th>
-      <th>Text</th>
-    </tr>
+  
    
     <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.text %></td>
-      </tr>
-    <% end %>
-  </table>
+      <div class="post">
+        <div class="post_title">
+          <%= link_to post.title, post_path(post) %>
+        </div>
+        <div class="post_text">
+          <%= post.text %>
+        </div>
 
-  <%= link_to 'New post', new_post_path %>
+        <div class="post_edit">
+          <%= link_to 'Edit', edit_post_path(post) %> |
+          <%= link_to 'Destroy', post_path(post),
+                      method: :delete, data: { confirm: 'Are you sure?' } %>
+        </div>
+      </div>
+    <% end %>
+
+    <div class="post_btn">
+      <%= link_to 'New post', new_post_path %>
+    </div>
 
 </div>
