--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,13 +1,13 @@
 <div class="container-inner">
-	<p>
-	  <strong>Title:</strong>
-	  <%= @post.title %>
-	</p>
-	 
-	<p>
-	  <strong>Text:</strong>
-	  <%= @post.text %>
-	</p>
 
-	<%= link_to 'Back', posts_path %>
+
+	<div class="post">
+        <div class="post_title"><%= @post.title %></div>
+	  	<div class="post_text"><%= @post.text %></div>
+	  	<div class="post_edit"><%= link_to 'Edit', edit_post_path(@post) %></div>
+	 </div>
+
+	 <div class="post_btn">
+		<%= link_to 'Back', posts_path %>
+	</div>
 </div>
