added comments model to posts

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -9,6 +9,14 @@
 	&:hover .post_edit {
 		display: block;
 	}
+	table {
+		width: 100%;
+	}
+	td {
+		padding:10px;
+		width: 50%;
+		text-align: center;
+	}
 }
 
 .post_title {
