--- a/app/assets/stylesheets/site_styles.css.scss
+++ b/app/assets/stylesheets/site_styles.css.scss
@@ -34,6 +34,11 @@ header {
 	width: 100%;
 	text-align: center;
 	background-color: #000;
+	line-height: 2em;
+	width: 100%;
+	padding: 0 auto;
+	color: #fff;
+	font-size: 3em;
 	a {
 		line-height: 2em;
 		width: 100%;
